--- a/color_mixer/index.html
+++ b/color_mixer/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h4 id="author" title="GossJS">Нюхалов Денис</h4>
     <div class="color_pickers">
         <p>Red:</p>
         <input class="num_inputs" type="number" value="255" min="0" max="255">
